# sduino

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sduino.h
BMI08x/Include/: bmi08x.h  bmi08x_defs.h
BMI08x/Source/: bmi08a.c  bmi08g.c
ESC/Include/: esc.hpp  esc_hw.h
ESC/Source/: esc.cpp
VL53L0X/Include/: vl53l0x_api.h  vl53l0x_api_calibration.h  vl53l0x_api_core.h  vl53l0x_api_ranging.h  vl53l0x_api_strings.h  vl53l0x_def.h  vl53l0x_device.h  vl53l0x_interrupt_threshold_settings.h  vl53l0x_platform.h  vl53l0x_platform_log.h  vl53l0x_tuning.h
VL53L0X/Source/: vl53l0x_api.c  vl53l0x_api_calibration.c  vl53l0x_api_core.c  vl53l0x_api_ranging.c  vl53l0x_api_strings.c  vl53l0x_platform.c
hardware/: IS31FL3218.h  bmi08_hw.h  encoder_hw.h  esc_hw.h  i2c_mux.h  imu_hw.h  line_sensor_hw.h  motor_driver_hw.h  port.h  sensorx.h  sensorx_vl53l0x.c  spi_adc_hw.h  time_hw.h
hardware/pio/: encoder.pio  spi_adc.pio
interface/: interface.hpp  interface_generator.hpp  led.hpp  nvm.hpp
interface/Include/: interface.hpp
interface/Source/: interface.cpp
line_follower/Include/: line_follower.hpp
line_follower/Source/: code.txt  line_follower.cpp  rev1_code.txt
math/: pid.hpp  vmath.hpp
mini_sumo/Include/: mini_sumo.hpp
mini_sumo/Source/: OLD.CPP  mini_sumo.cpp
motion/: esc.hpp  motor_driver.hpp
motors/Include/: motor_driver.hpp
motors/Source/: motor_driver.cpp
nvm/Include/: nvm.hpp
nvm/Source/: nvm.cpp
old/: MMC5603.c  MMC5603.h  PCA9548A.txt  SensorFusion.txt  SensorFusionh.txt  imu_old.txt  line_follower.cpp  line_sensor.txt  line_sensor_hwo.txt  line_sensorh.txt  rev1_code.txt
pid/Include/: pid.hpp
robot1/: CMakeLists.txt  PCA9548A.txt  SensorFusion.txt  SensorFusionh.txt  imu_old.txt  line_sensor_hwo.txt
robot1/Include/: config.hpp  main.hpp
robot1/Source/: interface.cpp  main.cpp
robot1_m2/: CMakeLists.txt
robot1_m2/Include/: main.hpp
robot2/: CMakeLists.txt
robot2/Include/: main.hpp
robot2/Source/: main.cpp
sduino_esp32c3/: file_handler.ino  http_server.ino  misc.ino  sduino_esp32c3.ino
sduino_esp32c3/data/: app.js  edit.css  edit.htm  edit.js  edit_src.css  edit_src.js
sensors/: distance_sensor.hpp  encoder.hpp  imu.hpp  line_sensor.hpp
sensors/hardware/BMI08x/Include/: bmi08_spi.h  bmi08x_defs.h
sensors/hardware/BMI08x/Source/: bmi08_spi.c
sensors/hardware/I2C_MUX/Include/: PCA9548A.h  PI4MSD5V9540B.h
sensors/hardware/I2C_MUX/Source/: PCA9548A.c  PI4MSD5V9540B.c
sensors/hardware/LED_DRIVER/Include/: IS31FL3218.h
sensors/hardware/LED_DRIVER/Source/: IS31FL3218.c
sensors/hardware/MMC5603/Include/: MMC5603.h
sensors/hardware/MMC5603/Source/: MMC5603.c
sensors/hardware/VL53L0X/Include/: vl53l0x_api_strings.h  vl53l0x_platform.h
sensors/hardware/VL53L0X/Source/: vl53l0x_platform.c  vl53l0x_platform_log.c
sensors/hardware/encoder/Include/: encoder.h  encoder.hpp  encoder_hw.h
sensors/hardware/encoder/Source/: encoder.c  encoder.cpp  encoder.pio
sensors/hardware/padc/Include/: padc.h
sensors/hardware/padc/Source/: padc.c  padc.pio  padc_broken.pio
sensors/imu/Include/: imu.hpp
sensors/imu/SensorFusion/Include/: SensorFusion.h
sensors/imu/SensorFusion/Source/: SensorFusion.cpp
sensors/imu/Source/: imu.cpp
sensors/line_sensor/Include/: line_sensor.hpp  line_sensor.txt  line_sensor_hw.h
sensors/line_sensor/Source/: line_sensor.cpp  line_sensor.txt
sensors/port/Include/: port.h
sensors/port/Source/: port.c
sensors/sensorx/Include/: sensorx.h
sensors/sensorx/Source/: sensorx.c  sensorx_vl53l0x.c
server_files/: edit.htm  linefollower.htm  linefollower_MOT_TEST.htm  linefollower_allvar.htm  scripts.js  styles.css  sumo.htm
